--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   max-width: 1280px;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
